exports[`Storyshots API [mcs-lite-theme] [JSON] kind 1`] = `
<div>
  <pre>
    [
      \"default\",
      \"primary\",
      \"success\",
      \"error\",
      \"warning\"
    ]
  </pre>
</div>
`;

exports[`Storyshots API [mcs-lite-theme] [JSON] theme 1`] = `
<div>
  <pre>
    {
      \"color\": {
        \"black\": \"#353630\",
        \"grayBase\": \"#999A94\",
        \"grayDark\": \"#D1D2D3\",
        \"grayLight\": \"#FAFAFA\",
        \"white\": \"#FFFFFF\",
        \"default\": \"#FAFAFA\",
        \"primary\": \"#00A1DE\",
        \"success\": \"#69BE28\",
        \"error\": \"#F5364E\",
        \"warning\": \"#F39A1E\"
      },
      \"base\": {
        \"bodyBackground\": \"#F1F2F7\",
        \"fontSize\": \"14px\",
        \"lineHeight\": 1.5,
        \"inputHeight\": \"32px\"
      },
      \"fontSize\": {
        \"small\": \"86%\",
        \"p\": \"1rem\",
        \"h6\": \"1rem\",
        \"h5\": \"1rem\",
        \"h4\": \"1.14rem\",
        \"h3\": \"1.43rem\",
        \"h2\": \"1.71rem\",
        \"h1\": \"2.43rem\"
      }
    }
  </pre>
</div>
`;

exports[`Storyshots B API 1`] = `
<b
  className="dbJQUp">
  Bold content
</b>
`;

exports[`Storyshots B CJK 1`] = `
<h4
  className="kqHMIM"
  color="black">
  <b
    className="dbJQUp">
    控制開關粗體字
  </b>
</h4>
`;

exports[`Storyshots B With color 1`] = `
<div
  className="hEzGry"
  color="primary">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <b
    className="dbJQUp">
     Bold content 
  </b>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots B Within <P> 1`] = `
<div
  className="cqMgnG"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="gAkaPt">
    <b
      className="dbJQUp">
       Bold content 
    </b>
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Button API 1`] = `
<button
  className="hhGxPY"
  kind="primary">
  Simple button
</button>
`;

exports[`Storyshots Button Overriding style 1`] = `
<button
  className="iVccwG"
  kind="primary"
  onClick={[Function]}>
  Overriding style
</button>
`;

exports[`Storyshots Button With kind props 1`] = `
<div
  className="epDjBm">
  <button
    className="eKAgHO"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="hhGxPY"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="dIKOWb"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="gMVhkr"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="joofWL"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Button With theme provider (Material) 1`] = `
<div
  className="epDjBm">
  <button
    className="cADtOQ"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="jfRLRd"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="bXnLIP"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="kexEwl"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="iQTyOW"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Card API 1`] = `
<div
  className="eHLExQ">
  Card Content
</div>
`;

exports[`Storyshots DataChannel DataChannel.ControlNumber 1`] = `
<div
  className="hPwCMI">
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    <div
      className="kdCvHd">
      <input
        className="QbwlJ"
        kind="primary"
        onChange={undefined}
        type="number"
        value={undefined} />
      <div
        className="dFpjFs">
        Clear
        <button
          className="hhGxPY"
          kind="primary"
          onClick={[Function]}>
          Ok
        </button>
      </div>
    </div>
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        123125125125125
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannel DataChannel.ControlSwitch 1`] = `
<div
  className="hPwCMI">
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    <div
      checked={false}
      className="hBmCMm"
      onClick={[Function]} />
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        123125125125125
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannel Fixed width 1`] = `
<div
  className="hVuYrW hPwCMI">
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    <div
      className="kdCvHd">
      <input
        className="QbwlJ"
        kind="primary"
        onChange={undefined}
        type="number"
        value={undefined} />
      <div
        className="dFpjFs">
        Clear
        <button
          className="hhGxPY"
          kind="primary"
          onClick={[Function]}>
          Ok
        </button>
      </div>
    </div>
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        123125125125125
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannelCard API 1`] = `
<div
  className="hPwCMI">
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    Children
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        Last data point time : 2015-06-12 12:00
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannelCard Fixed width 1`] = `
<div
  className="hVuYrW hPwCMI">
  <div
    className="fROLJM">
    V
  </div>
  <div
    className="dJSrbi">
    <div
      checked={false}
      className="hBmCMm" />
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        Last data point time : 2015-06-12 12:00
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading API 1`] = `
<h1
  className="fwDbfe"
  color="black">
  Level 1
</h1>
`;

exports[`Storyshots Heading With color props 1`] = `
<div>
  <h2
    className="jqocls"
    color="black">
    Level 2 
    black
  </h2>
  <h2
    className="bERyZV"
    color="grayBase">
    Level 2 
    grayBase
  </h2>
  <h2
    className="doouNK"
    color="grayDark">
    Level 2 
    grayDark
  </h2>
  <h2
    className="jlswaz"
    color="grayLight">
    Level 2 
    grayLight
  </h2>
  <h2
    className="iAWgMf"
    color="white">
    Level 2 
    white
  </h2>
  <h2
    className="jlswaz"
    color="default">
    Level 2 
    default
  </h2>
  <h2
    className="bEllWn"
    color="primary">
    Level 2 
    primary
  </h2>
  <h2
    className="rmutG"
    color="success">
    Level 2 
    success
  </h2>
  <h2
    className="eYTobf"
    color="error">
    Level 2 
    error
  </h2>
  <h2
    className="lgGZbt"
    color="warning">
    Level 2 
    warning
  </h2>
</div>
`;

exports[`Storyshots Heading With level props 1`] = `
<div>
  <h1
    className="fwDbfe"
    color="black">
    h
    1
     - Level 
    1
       (
    2.43rem
     = 
    34.02px
    )
  </h1>
  <h2
    className="jqocls"
    color="black">
    h
    2
     - Level 
    2
       (
    1.71rem
     = 
    23.939999999999998px
    )
  </h2>
  <h3
    className="LPHYu"
    color="black">
    h
    3
     - Level 
    3
       (
    1.43rem
     = 
    20.02px
    )
  </h3>
  <h4
    className="kqHMIM"
    color="black">
    h
    4
     - Level 
    4
       (
    1.14rem
     = 
    15.959999999999999px
    )
  </h4>
  <h5
    className="iyjEQr"
    color="black">
    h
    5
     - Level 
    5
       (
    1rem
     = 
    14px
    )
  </h5>
  <h6
    className="iyjEQr"
    color="black">
    h
    6
     - Level 
    6
       (
    1rem
     = 
    14px
    )
  </h6>
</div>
`;

exports[`Storyshots Input API 1`] = `
<input
  className="QbwlJ"
  kind="primary"
  placeholder="placeholder" />
`;

exports[`Storyshots Input With kind props 1`] = `
<div
  className="cZlPqe">
  <input
    className="jcKvDH"
    kind="default"
    placeholder="default" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="primary" />
  <input
    className="cQVsYe"
    kind="success"
    placeholder="success" />
  <input
    className="cCmFiG"
    kind="error"
    placeholder="error" />
  <input
    className="ctBKec"
    kind="warning"
    placeholder="warning" />
</div>
`;

exports[`Storyshots Input With type props 1`] = `
<div
  className="cZlPqe">
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="text"
    type="text" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="email"
    type="email" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="number"
    type="number" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="password"
    type="password" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="tel"
    type="tel" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="search"
    type="search" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="month"
    type="month" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="week"
    type="week" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="date"
    type="date" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="color"
    type="color" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="file"
    type="file" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="radio"
    type="radio" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="time"
    type="time" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="url"
    type="url" />
  <input
    className="QbwlJ"
    kind="primary"
    placeholder="range"
    type="range" />
</div>
`;

exports[`Storyshots InputRange API 1`] = `
<input
  className="hdhnFx"
  kind="primary"
  type="range" />
`;

exports[`Storyshots InputRange With kind props 1`] = `
<div
  className="cZlPqe">
  <input
    className="kBSwKq"
    kind="default"
    type="range" />
  <input
    className="hdhnFx"
    kind="primary"
    type="range" />
  <input
    className="jXdUnH"
    kind="success"
    type="range" />
  <input
    className="ilYUjW"
    kind="error"
    type="range" />
  <input
    className="jfqTuL"
    kind="warning"
    type="range" />
</div>
`;

exports[`Storyshots P API 1`] = `
<p
  className="cqMgnG"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur esse dolore incididunt incididunt aliquip pariatur est minim officia sit. Nulla pariatur duis duis quis commodo cupidatat voluptate enim culpa elit adipisicing do cupidatat sint anim. Cillum elit magna occaecat proident sit cupidatat ad quis sunt id culpa culpa. Ad duis nulla in incididunt amet consequat officia ad voluptate voluptate. Pariatur eiusmod ullamco cupidatat non magna officia aute magna deserunt qui aute dolor eu. Qui amet non ex cillum sunt ad velit consequat ipsum velit.
</p>
`;

exports[`Storyshots P Nested children with div 1`] = `
<div
  className="cqMgnG"
  color="black">
  <div>
    <span>
      Qui amet non ex cillum sunt ad velit consequat ipsum velit.
    </span>
  </div>
</div>
`;

exports[`Storyshots P With color props 1`] = `
<div>
  <div
    className="cqMgnG"
    color="black">
    Paragraph 
    black
  </div>
  <div
    className="jyQfel"
    color="grayBase">
    Paragraph 
    grayBase
  </div>
  <div
    className="iChNxS"
    color="grayDark">
    Paragraph 
    grayDark
  </div>
  <div
    className="kUcDrP"
    color="grayLight">
    Paragraph 
    grayLight
  </div>
  <div
    className="eJSHFJ"
    color="white">
    Paragraph 
    white
  </div>
  <div
    className="kUcDrP"
    color="default">
    Paragraph 
    default
  </div>
  <div
    className="hEzGry"
    color="primary">
    Paragraph 
    primary
  </div>
  <div
    className="ciVPjB"
    color="success">
    Paragraph 
    success
  </div>
  <div
    className="hrGHNS"
    color="error">
    Paragraph 
    error
  </div>
  <div
    className="cWPeCi"
    color="warning">
    Paragraph 
    warning
  </div>
</div>
`;

exports[`Storyshots Small API 1`] = `
<small
  className="gAkaPt">
  Small content
</small>
`;

exports[`Storyshots Small With color 1`] = `
<div
  className="hEzGry"
  color="primary">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="gAkaPt">
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Small Within <P> 1`] = `
<div
  className="cqMgnG"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="gAkaPt">
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Switch API 1`] = `
<div>
  <div
    checked={false}
    className="hBmCMm" />
  <div
    checked={true}
    className="ihmkZm" />
</div>
`;

exports[`Storyshots Switch Overriding style 1`] = `
<div
  checked={false}
  className="YBIqr"
  onClick={[Function]} />
`;

exports[`Storyshots Switch Stateful switch 1`] = `
<div
  checked={false}
  className="hBmCMm"
  onClick={[Function]} />
`;

exports[`Storyshots Textarea API 1`] = `
<textarea
  className="kvtfBS"
  kind="primary"
  placeholder="placeholder"
  rows="3" />
`;

exports[`Storyshots Textarea With kind props 1`] = `
<div
  className="cZlPqe">
  <textarea
    className="iXzziC"
    kind="default"
    placeholder="default" />
  <textarea
    className="kvtfBS"
    kind="primary"
    placeholder="primary" />
  <textarea
    className="irIqNe"
    kind="success"
    placeholder="success" />
  <textarea
    className="tpuwn"
    kind="error"
    placeholder="error" />
  <textarea
    className="dEWaqb"
    kind="warning"
    placeholder="warning" />
</div>
`;
